2002/10/20  ***** v1.1.0 shipped *****

2002/10/10  fadden
    - added fancy help text (-h)

2002/10/09  fadden
    - added "-zz" flag to specify libbz2's "bzip2" compression

2002/10/08  fadden
    - added Binary II support

2002/09/30  fadden
    - added "-z" flag to specify zlib's "deflate" compression (the
      "secret" debug dump command is now -g)

2002/09/26  fadden
    - progress updater now shows "analyzing" for scan pass of SQ

2002/09/23  fadden
    - ran the code through valgrind; found and fixed some minor bugs

2002/09/20  fadden
    - pulled the sources out and started fiddling with them again
    - changed hard tabs to spaces

2000/05/22  ***** v1.0.1 shipped (no changes - version follows nufxlib) *****

2000/05/18  ***** v1.0.0 shipped *****

2000/05/18  fadden
    - added nulib2 to set of things stripped by "distbin"
    - updated version information to indicate final release

2000/03/25  ***** v0.6.1 shipped *****

2000/03/25      fadden
    - Sheppy says Mac OS X PPC v1.02 and v1.2 work with minor SysDefs tweak

2000/03/05  ***** v0.6.0 (beta) shipped *****

2000/03/05  fadden
    - don't call mktemp(), just pass template into NuOpenRW
    - removed DEBUG_MSGS from default CFLAGS
    - updated version information to indicate beta release

2000/02/24  ***** v0.5.1 shipped *****

2000/02/20  changes from Scott Blackman
    - portability fixes for DJGPP under Win95

2000/02/17  changes from Devin Reade
    - portability fixes for BSD, AIX, and others
    - added "distbin" target

2000/02/09  ***** v0.5.0 (alpha) shipped *****

2000/02/09  fadden
    - changed the comparison used when extracting/deleting a list of files
      from strcasecmp to strcmp, since NufxLib does case-sensitive compares.
    - fixed the percentage for files and archives larger than 21MB

2000/02/08  fadden
    - tweaked the BeOS/PPC config around a little
    - deleted some commas to make "gcc -pedantic" happy
    - changed version to x.y.z format here too