@@ -1,3 +1,9 @@
+2003/01/10  fadden
+    - Check NufxLib "compiled" version against "linked" version.
+
+2002/12/06  fadden
+    - Made minor changes to allow linking NufxLib in as a DLL.
+
 2002/10/20  ***** v1.1.0 shipped *****
 
 2002/10/10  fadden
